Agora tem ingles para comprar

--- a/.env
+++ b/.env
@@ -42,3 +42,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 EMAIL_FROM=noreply@wab.com.br
 EMAIL_CONTACT_TO=test@wab.com.br
+
+TINYMCE_API_KEY=4sg4fs5qtacwxgh3i620g1rlgcw3ib4p9pok8cjit85628s4
